recepten.html aangemaakt

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,3 +1,11 @@
+/*   
+    Document   : stylesheet.css
+    Created on : 01-10-2014
+    Author     : 
+    Description: Purpose of the stylesheet.css follows.
+    Last update: 01-10-2014
+*/
+
 body{
 	width: 720px;
 	height: 1280px;
